--- a/src/app/data-login/data-login.component.html
+++ b/src/app/data-login/data-login.component.html
@@ -1,1 +1,17 @@
-<p>data-login works!</p>
+<div class="modal-dialog text-center">
+    <div class="col-sm-12">
+        <div class="modal-content">
+            <form class="col-12">
+                <div class="form-group">
+                    <input type="email" class="form-control" 
+                    placeholder="e-mail">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" 
+                    placeholder="phone">
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+        </div>
+    </div>
+</div>
