Estructura para el footer del LOGIN

--- a/src/app/footer-login/footer-login.component.html
+++ b/src/app/footer-login/footer-login.component.html
@@ -1,1 +1,9 @@
-<p>footer-login works!</p>
+<footer id="footer">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col text-footer">
+                <a href="#">F&G Solutions</a>
+            </div>
+        </div>
+    </div>
+</footer>
