Diseño y estructura para el Header del LOGIN

--- a/src/app/header-login/header-login.component.html
+++ b/src/app/header-login/header-login.component.html
@@ -1,1 +1,13 @@
-<p>header-login works!</p>
+<div class="container-image">
+    <figure class="project-imageContainer">
+        <img class="project-image" [src]="logo_FYG" alt="" width="500px">
+    </figure>
+</div>
+
+<div class="container-text">
+    <div class="row text-center">
+        <div class="col text-footer">
+            LOGIN
+        </div>
+    </div>
+</div>
