--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<app-header-login></app-header-login>
-<app-data-login></app-data-login>
-<app-footer-login></app-footer-login>
+<router-outlet></router-outlet>
