--- a/src/app/data-login/data-login.component.html
+++ b/src/app/data-login/data-login.component.html
@@ -10,7 +10,7 @@
                     <input type="password" class="form-control" 
                     placeholder="phone">
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary" routerLink="/profile">Login</button>
             </form>
         </div>
     </div>
