--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,44 @@
 <app-cabecera></app-cabecera>
 <app-menu></app-menu>
 <div class="footer-profile">
+  <div *ngIf="user">
+    <table class="table table-striped table-dark">
+      <tbody>
+        <tr>
+          <th scope="row">User ID</th>
+          <td>{{user.id}}</td>
+        </tr>
+        <tr>
+          <th scope="row">Name</th>
+          <td>{{user.name}}</td>
+        </tr>
+        <tr>
+          <th scope="row">User name</th>
+          <td>{{user.username}}</td>
+        </tr>
+        <tr>
+          <th scope="row">e-mail</th>
+          <td>{{user.email}}</td>
+        </tr>
+        <tr>
+          <th scope="row">Addres</th>
+          <td>{{user.addres}}</td>
+        </tr>
+        <tr>
+          <th scope="row">Phone</th>
+          <td>{{user.phone}}</td>
+        </tr>
+        <tr>
+          <th scope="row">Website</th>
+          <td>{{user.website}}</td>
+        </tr>
+        <tr>
+          <th scope="row">Company</th>
+          <td>{{user.company.name}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+    
     <app-footer></app-footer>
 </div>
