Cambio en logica de rutas para que estas sean dinamicas y acorde a el id del usuario

--- a/src/app/data-login/data-login.component.html
+++ b/src/app/data-login/data-login.component.html
@@ -12,7 +12,7 @@
                 </div>
                 <button (click)="login()" 
                 type="submit" class="btn btn-primary" 
-                routerLink="/profile/1">Login
+                [routerLink]="['/profile/', id]">Login
                 </button>
             </form>
         </div>
