--- a/src/app/header-login/header-login.component.html
+++ b/src/app/header-login/header-login.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container-text">
-    <div class="row text-center">
+    <div class="row-4 text-center">
         <div class="col text-footer">
             LOGIN
         </div>
