--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/profile">My profile<span class="sr-only">(current)</span></a>
+          <a class="nav-link" [routerLink]="['/profile/', id]">My profile<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/posts">My posts</a>
+          <a class="nav-link" [routerLink]="['/posts/', id]">My posts</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/login">Log Out</a>
