Creación de un nuevo componente para separar el trabajo de los componentes

--- a/src/app/button-create/button-create.component.html
+++ b/src/app/button-create/button-create.component.html
@@ -1,7 +1,40 @@
 <div class="container-fluid">
     <div class="row justify-content-end">
         <div class="col-auto">
-            <button type="button" class="btn btn-primary btn-lg btn-block button-new-post">New Post</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block button-new-post" data-toggle="modal" data-target="#addPostModal">New Post</button>
         </div>
     </div>
+</div>
+
+<div class="modal fade" id="addPostModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">ID Post:</label>
+            <input [(ngModel)]="newPost.id" name="value-id" type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Title:</label>
+            <input [(ngModel)]="newPost.title" name="value-title" type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="form-group">
+            <label for="message-text" class="col-form-label">Information:</label>
+            <textarea [(ngModel)]="newPost.body" name="value-body" class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button (click)="addPost()" type="button" class="btn btn-primary">Ok</button>
+      </div>
+    </div>
+  </div>
 </div>
