Modificación para incorporar las peticiones al API de usuarios

--- a/src/app/data-login/data-login.component.html
+++ b/src/app/data-login/data-login.component.html
@@ -3,8 +3,8 @@
         <div class="modal-content">
             <form class="col-12">
                 <div class="form-group">
-                    <input type="email" [(ngModel)]="email" name="value-email" class="form-control" 
-                    placeholder="e-mail">
+                    <input type="text" [(ngModel)]="id" name="value-email" class="form-control" 
+                    placeholder="ID">
                 </div>
                 <div class="form-group">
                     <input type="password" [(ngModel)]="phone" name="value-phone" class="form-control" 
