--- a/src/app/posts-user/posts-user.component.html
+++ b/src/app/posts-user/posts-user.component.html
@@ -13,9 +13,61 @@
         <th scope="row"> {{ posts[i].id }} </th>
         <td> {{ posts[i].title }} </td>
         <td> {{ posts[i].body }} </td>
-        <td><button type="button" class="btn btn-danger">Delete</button></td>
-        <td><button type="button" class="btn btn-success">Edit</button></td>
+        <td><button (click)="getPost(posts[i].id)" type="button" class="btn btn-danger" data-toggle="modal" data-target="#deletePostModal">Delete</button></td>
+        <td><button type="button" class="btn btn-success" data-toggle="modal" data-target="#modalEdit">Edit</button></td>
       </tr>
     </tbody>
-
 </table>
+
+<div class="modal fade" id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="modalEditLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalEditLabel">Edit Post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">New title:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="form-group">
+            <label for="message-text" class="col-form-label">New information:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="deletePostModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="deletePostModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deletePostModalLabel">Danger, delete Post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div *ngIf="post" class="modal-body">
+        Title: <br> 
+        {{ post[0].title }} <br><br>
+        Information:
+        <p>{{ post[0].body }}</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" (click)="deletePostUser(post.id)" class="btn btn-danger" data-dismiss="modal">Confirm</button>
+      </div>
+    </div>
+  </div>
+</div>
